# polingo

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
backend-app/: .dockerignore  .env.example  Dockerfile  main.py  migrate_enabled.py  requirements.txt
backend-app/app/: __init__.py  database.py  llm.py  models.py  schemas.py  seed.py  utils.py
backend-app/app/api/: __init__.py  admin.py  practice.py  session.py  stats.py  verbs.py  words.py
frontend-app/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend-app/src/: App.jsx  styles.css
