[project]
name = "polingo"
version = "0.1.0"
description = "Language learning backend for the Polingo Polish trainer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.115",
	"uvicorn[standard]>=0.23",
	"sqlmodel>=0.0.8",
]

[build-system]
requires = ["hatchling>=1.1"]
build-backend = "hatchling.build"
